--- a/safety/server/package.json
+++ b/safety/server/package.json
@@ -4,7 +4,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mysql": "^2.18.1",
+    "node-schedule": "^2.1.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
